Fix spacing and scroll to ToC

--- a/src/main.css
+++ b/src/main.css
@@ -143,7 +143,7 @@ nav {
 #site-title {
   font-size: 2.5rem;
   text-transform: uppercase;
-  margin: 12rem 0 2.5rem;
+  margin: 10rem 0 2rem;
   padding: 0.5rem 0;
   background: linear-gradient(to bottom, var(--orange) 10%, var(--yellow) 110%);
   box-shadow: 0 0.15rem 0 var(--black-50);
@@ -290,7 +290,7 @@ img {
   font-family: system-ui;
   font-weight: normal;
   font-size: 0.5rem;
-  line-height: 0.7rem;
+  line-height: 0.6rem;
   text-shadow: none;
   background: var(--yellow-note);
   border: 1px solid black;
@@ -354,7 +354,7 @@ article {
 }
 #toc-content {
   overflow-y: scroll;
-  max-height: 14rem;
+  max-height: 12rem;
   padding: 0.5rem;
   margin: 1rem;
   border: 2px inset var(--grey-light);
